deployments/prometheus-and-grafana/nginx-ingress-metrics-prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress-metrics-prometheus
  namespace: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  selector:
    app: nginx-ingress
  ports:
  - name: metrics
    port: 9113
