deployments/prometheus-and-grafana/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  rules:
  - host: grafana.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-stack-grafana
          servicePort: 80
